/*buildscript {
    dependencies {
        classpath "org.gradle:test-retry-gradle-plugin:1.3.1"
    }
}*/

plugins {
//    id 'com.diffplug.spotless' version "6.3.0" apply false
    id 'java'
//    id "org.sonarqube" version "2.7"
}

group 'org.psb.autotestframework'
version '1.0'

allprojects{
    repositories {
        mavenLocal()
        maven {
            url atMavenGroupUrl
            credentials {
                username = "at-temp-user-role"
                password = "tn9LSnYttJLmyLPk0mSz"
            }
        }
        maven {
            url mvnProxyUrl
        }
        maven {
            url "https://nexus-external.psbnk.msk.ru/repository/repo.maven.apache.org-proxy/"
        }
    }
}

subprojects {
    apply plugin: 'java'
//    apply plugin: 'com.diffplug.spotless'


    group 'org.psb.autotestframework'
    version '1.0'
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
    compileJava.options.encoding = 'UTF-8'
    compileTestJava.options.encoding = 'UTF-8'
    javadoc.options.encoding = 'UTF-8'

//    spotless {
//        java {
//            target fileTree('.') {
//                include '**/*.java'
//                exclude '**/build/**', '**/build-*/**'
//            }
//            toggleOffOn()
//            googleJavaFormat().reflowLongStrings()
//
//            removeUnusedImports()
//            trimTrailingWhitespace()
//            endWithNewline()
//        }
//
//        sql {
//            target fileTree('.') {
//                include '**/*.sql'
//                exclude '**/build/**', '**/build-*/**'
//            }
//            dbeaver()
//        }
//    }

    tasks.withType(Test).configureEach {
        jvmArgs = ['--add-opens', 'java.base/java.time=ALL-UNNAMED']
    }
}

//canBeResolved=true

/*
gradle.taskGraph.whenReady { graph ->
    if (graph.hasTask(':sonarqube')) {
        test.enabled = false
    }
}*/
